--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Run tests
       run: |
-         pytest --alluredir=allure-results
+         pytest --headless --alluredir=allure-results
