--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-# Конфигурация для автоматического запуска тестов в GitHub Action при каждом пуше
 name: Test
 
 on:
@@ -18,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2  # Использовать действие для настройки Python
       with:
-          python-version: '3.x'  # Использовать Python версии 3.x
+        python-version: '3.12'  # Использовать Python версии 3.12
 
     - name: Install dependencies
       run: |
@@ -27,4 +26,10 @@ jobs:
 
     - name: Run tests
       run: |
-         pytest --headless --alluredir=allure-results
+        pytest --headless --alluredir=allure-results
+
+    - name: Upload Allure results
+      uses: actions/upload-artifact@v2
+      with:
+        name: allure-results
+        path: allure-results
